fix gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,8 +4,8 @@
     height: 100%;
 }
 .main-one{
-    display: grid;
-    grid-template-rows: 90vh auto;
+    display: flex;
+    /* grid-template-rows: 90vh auto; */
 }
 
 #main-panel{
